# timz-platform

./: .flake8  .gitignore  CODEOWNERS.md  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: c34c3fdcf85a_baseline.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_health.py  test_jwt.py
backend/timz_app/: main.py
backend/timz_app/api/v1/: admin.py  auth.py  dev.py  guards_demo.py  router.py
backend/timz_app/core/: config.py  jwt.py  security.py
backend/timz_app/db/: base_models.py  database.py
backend/timz_app/db/migrations/: env.py
backend/timz_app/db/migrations/versions/: 5eb74d3a97b6_add_refresh_tokens.py  6e2a1696a52d_seed_roles.py  8036f30146cd_create_roles_manual.py  9eb72d20b92f_drop_ping.py  b77f8ca07334_add_users_and_user_roles.py  c64bd2da16b1_ping_add_created_by.py  cac46612711f_add_ping.py
backend/timz_app/dependencies/: firebase.py
backend/timz_app/models/: refresh_token.py  role.py  user.py  user_role.py
backend/timz_app/schemas/: auth.py
backend/timz_app/services/: auth_service.py  user_service.py
